plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.epages.restdocs-api-spec' version '0.18.2'
}

group = 'com.fittoring'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

ext {
    jjwtVersion = '0.11.5'
    set('snippetsDir', file("build/generated-snippets"))
    querydslVersion = '5.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
    outputs.dir snippetsDir
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-parameters']
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // actuator & metrics
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    // AWS S3
    implementation 'software.amazon.awssdk:s3:2.32.14'
    // AWS SQS
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs:3.2.0'
    // AWS CloudWatch
    implementation 'io.micrometer:micrometer-registry-cloudwatch2'
    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // web mock server
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
    // rest-assured
    testImplementation("io.rest-assured:rest-assured:5.5.5")

    // query DSL
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor("com.querydsl:querydsl-apt:${querydslVersion}:jakarta")
    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
    annotationProcessor("jakarta.persistence:jakarta.persistence-api")

    // jwt
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    // flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // restdocs
    testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
    testImplementation 'com.epages:restdocs-api-spec-restassured:0.18.2'
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.2'

    // image resize
    implementation 'net.coobird:thumbnailator:0.4.20'
    implementation 'com.twelvemonkeys.imageio:imageio-core:3.12.0'
    implementation 'com.twelvemonkeys.imageio:imageio-metadata:3.12.0'
    implementation 'com.twelvemonkeys.imageio:imageio-jpeg:3.12.0'
    implementation 'com.github.gotson.nightmonkeys:imageio-heif:1.1.0'

    // String util
    implementation 'org.apache.commons:commons-lang3:3.14.0'
}

openapi3 {
    servers = [
            { url = "https://devapi.fittoring.com"; description = "Dev Server" },
            { url = "http://localhost:8080"; description = "localHost" },
    ]
    title = "Fittoring API"
    description = "This is the API document provided by the Fittoring server."
    version = "0.0.1"
    format = "yaml"
}

tasks.register("cleanOpenapiSpec", Delete) {
    delete layout.buildDirectory.dir("api-spec")
}

tasks.register("cleanSwaggerStatic", Delete) {
    delete "src/main/resources/static/swagger-ui/openapi3.yaml"
}

tasks.matching { it.name == "openapi3" }.configureEach {
    dependsOn("test")
    dependsOn("cleanOpenapiSpec")
    finalizedBy("copyOasToSwagger")
}

tasks.register("copyOasToSwagger", Copy) {
    dependsOn("openapi3")
    dependsOn("cleanSwaggerStatic")
    from("build/api-spec/openapi3.yaml")
    into("src/main/resources/static/swagger-ui/")
    mustRunAfter("openapi3")
}

tasks.register("generateApiDocs") {
    dependsOn("openapi3", "copyOasToSwagger")
}
